# spider-interview-task

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.dev.yml  example.environment  manage.py  pyproject.toml  requirements.txt
api/: urls.py
api/common/tests/: base_api_test.py  conftest.py  utils.py
api/common/tests/urls/: market.py  openapi.py  organization.py
api/v1/: urls.py
api/v1/market/: serializers.py  urls.py  views.py
api/v1/market/tests/: conftest.py  pytest_api_market.py
api/v1/organizations/: serializers.py  urls.py  views.py
api/v1/organizations/tests/: conftest.py  pytest_api_organization.py
apps/market/: admin.py  baker_recipes.py  models.py
apps/market/migrations/: 0001_initial.py
apps/market/tests/: conftest.py
apps/organizations/: admin.py  apps.py  baker_recipes.py  models.py
apps/organizations/migrations/: 0001_initial.py
apps/organizations/tests/: conftest.py
apps/users/: baker_recipes.py
apps/users/tests/: conftest.py
market_app/: asgi.py  settings.py
