[project]
name = 'spider-interview-task'
version = '0.0.1'
description = 'Simple project for interview'

dependencies = [
    'django==3.2.20',
    'django-environ',
    'pytest',
    'pytest-django',
    'djangorestframework-simplejwt',
    'model_bakery',
    'django-filter',
    'psycopg2-binary',
    'pre-commit',
]


[tool.isort]
profile = 'black'
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
max-line-length = 120
ignore = 'E741'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "market_app.settings"
python_files = "pytest_*.py"
addopts = '-vv -lv'

[tool.setuptools]
py-modules = []
